--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "type": "module",
   "dependencies": {
-    "face-api.js": "^0.22.2"
+    "face-api.js": "^0.22.2",
+    "firebase": "^9.1.2"
   }
 }
