--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "type": "module",
   "dependencies": {
+    "easytimer.js": "^4.5.1",
     "face-api.js": "^0.22.2",
-    "firebase": "^9.1.2"
+    "firebase": "^9.2.0"
   }
 }
